# zed-demotape

./: .gitignore  README.md  extension.toml
.github/workflows/: sync.yml
grammars/: demotape.wasm
languages/demotape/: config.toml  highlights.scm
snippets/: demotape.json
tree-sitter/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/rust/: lib.rs
tree-sitter/queries/: highlights.scm
tree-sitter/src/: grammar.json  node-types.json  parser.c
